--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,21 @@
           <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-shade-plugin</artifactId>
+	<executions>
+	  <execution>
+	    <phase>package</phase>
+	    <goals>
+	      <goal>shade</goal>
+	    </goals>
+	  </execution>
+	</executions>
+	<configuration>
+	  <finalName>uber-${artifactId}-${version}</finalName>
+	</configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
