--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-shade-plugin</artifactId>
+        <version>2.3</version>
 	<executions>
 	  <execution>
 	    <phase>package</phase>
@@ -66,7 +67,7 @@
 	  </execution>
 	</executions>
 	<configuration>
-	  <finalName>uber-${artifactId}-${version}</finalName>
+	  <finalName>uber-${project.artifactId}-${project.version}</finalName>
 	</configuration>
       </plugin>
     </plugins>
